Localization: fix tests with leptos-fluent

--- a/locales/languages.json
+++ b/locales/languages.json
@@ -1,11 +1,4 @@
 [
-  {
-    "code": "en",
-    "name": "English",
-    "tag": "auto"
-  },
-  {
-    "code": "fr",
-    "name": "French"
-  }
+  ["en", "English"],
+  ["fr", "French"]
 ]
